Recent website comments update
Ref: client email sep 18

--- a/ar/causes.html
+++ b/ar/causes.html
@@ -135,7 +135,7 @@
               <div class="col-lg-11 py-5">
                 <div class="d-flex">
                   <h1 class="h2 fw-bold display-4 text-animate pb-2">الأسباب</h1>
-                  <span class="fw-bold">1</span>
+                  <span class="fw-bold">١</span>
                 </div>
                 <p class="mb-1">من الصعب تحديد عدد الأشخاص الذين يعانون من التعرق المفرط. كثير من الناس لا يرون طبيبًا أبدًا. يشعر البعض بالحرج الشديد من التحدث مع الطبيب. لا يدرك البعض الآخر أن هذه حالة طبية يمكن علاجها. لقد تعلم الباحثون أن معظم
                   الناس لديهم واحد مما يلي:</p>
@@ -149,7 +149,7 @@
                       <span>الأدوية أو المكملات الغذائية التي يمكن أن تسبب التعرق المفرط.</span>
                     </div>
                     <div class="causes-rounded-block-body fs-7 ">
-                      بعض الأدوية - بما في ذلك بعض مضادات الاكتئاب، وبروبرانولول، وبيلوكاربين، وبيثانيكول. يمكن أن يسبب التعرق المفرط.<sup>1,2</sup>
+                      بعض الأدوية - بما في ذلك بعض مضادات الاكتئاب، وبروبرانولول، وبيلوكاربين، وبيثانيكول. يمكن أن يسبب التعرق المفرط.<sup>١,٢</sup>
                     </div>
                   </div>
                   <div class="col-10 col-md-4 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center align-items-center flex-column pb-3">
@@ -161,7 +161,7 @@
                     </div>
                     <div class="causes-rounded-block-body fs-7 block-light">
                       يمكن أن تسبب العديد من الحالات الطبية التعرق المفرط. وتشمل مرض السكري والنقرس. يمكن أن يتسبب الورم أو الإصابة أيضًا في التعرق المفرط.<br>غالبًا ما تتعرق النساء بشكل مفرط عندما يصبن بهبات ساخنة أثناء انقطاع الطمث. السبب واضح. ومع
-                      ذلك، فإن بعض النساء يصبن بالتعرق المفرط بعد أن يمررن بانقطاع الطمث. هذا التعرق ليس له سبب واضح.<sup>1,2</sup>
+                      ذلك، فإن بعض النساء يصبن بالتعرق المفرط بعد أن يمررن بانقطاع الطمث. هذا التعرق ليس له سبب واضح.<sup>١,٢</sup>
                     </div>
                   </div>
                   <div class="col-10 col-md-4 col-lg-4 col-xl-4 col-xxl-3 d-flex justify-content-center align-items-center flex-column pb-3">
@@ -172,7 +172,7 @@
                       <span>فرد من العائلة يتعرق بشكل مفرط.</span>
                     </div>
                     <div class="causes-rounded-block-body fs-7 ">
-                      عندما يحدث التعرق المفرط في منطقة أو منطقتين من الجسم، فمن المحتمل أن يكون أحد أفراد الأسرة مصابًا أيضًا بهذه الحالة.<sup>1,2</sup>
+                      عندما يحدث التعرق المفرط في منطقة أو منطقتين من الجسم، فمن المحتمل أن يكون أحد أفراد الأسرة مصابًا أيضًا بهذه الحالة.<sup>١,٢</sup>
                     </div>
                   </div>
                 </div>
@@ -236,7 +236,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -245,7 +245,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
