--- a/ar/complications.html
+++ b/ar/complications.html
@@ -138,8 +138,8 @@
 
 
                 <p class="fs-4 mb-2 fw-bold">الأثر النفسي</p>
-                <p>إن الآثار السلبية لفرط التعرق تقارن مع حالات الأخرى ، مثل الصدفية الشديدة وأمراض الكلى في نهاية المرحلة والتهاب المفاصل الروماتويد والتصلب المتعدد.<sup>1</sup></p>
-                <p class="fw-bold mb-0">يشمل عبء المرض في فرط التعرق ما يلي:<sup>2</sup></p>
+                <p>إن الآثار السلبية لفرط التعرق تقارن مع حالات الأخرى ، مثل الصدفية الشديدة وأمراض الكلى في نهاية المرحلة والتهاب المفاصل الروماتويد والتصلب المتعدد.<sup>١</sup></p>
+                <p class="fw-bold mb-0">يشمل عبء المرض في فرط التعرق ما يلي:<sup>٢</sup></p>
                 <ul class="custom-icon-list list-icon-1">
                   <li>الإحراج الشديد المرتبط بالملابس المبللة الكفوف المبللة</li>
                   <li>الاحتياج لتغيير الملابس مرتين أو أكثر في اليوم</li>
@@ -159,7 +159,7 @@
                         <span class="position-relative">الالتهابات الفطرية</span>
                       </div>
                       <div class="csb-body fs-6">
-                        يزيد التعرق من خطر الإصابة بعدوى فطرية، خاصة على القدمين - وهي الأكثر شيوعًا مثل التهابات الأظافر الفطرية وقدم الرياضي.<sup>3</sup> </div>
+                        يزيد التعرق من خطر الإصابة بعدوى فطرية، خاصة على القدمين - وهي الأكثر شيوعًا مثل التهابات الأظافر الفطرية وقدم الرياضي.<sup>٣</sup> </div>
                     </div>
                   </div>
                   <div class="col-10 col-md-4 col-lg-6 col-xl-5 col-xxl-4 pb-3">
@@ -183,7 +183,7 @@
                       </div>
                       <div class="csb-body fs-6">
                         على الرغم من أن الأشخاص المصابين بفرط التعرق يتعرقون كثيرًا، إلا أن معظمهم لا يعانون من مشاكل في رائحة الجسم. وذلك لأن فرط التعرق لا يؤثر عادة على الغدد العرقية المسؤولة عن إفراز رائحة كريهة للعرق - تسمى الغدد الصماء
-                        العرقية.<br>ومع ذلك، إذا سمح للبكتيريا بتفكيك العرق، يمكن أن ينتج عن ذلك رائحة كريهة.<sup>3</sup> </div>
+                        العرقية.<br>ومع ذلك، إذا سمح للبكتيريا بتفكيك العرق، يمكن أن ينتج عن ذلك رائحة كريهة.<sup>٣</sup> </div>
                     </div>
                   </div>
                 </div>
@@ -250,7 +250,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -259,7 +259,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
