--- a/ar/diagnosis.html
+++ b/ar/diagnosis.html
@@ -138,14 +138,14 @@
 
 
                 <p class="fs-4 mb-0 fw-bold">الأعراض</p>
-                <p>عادة ما يتم تشخيص فرط التعرق الإبطي الأولي الشديد عندما يكون الشخص قد عانى على الأقل 6 أشهر من التعرق المفرط تحت الإبط (بدون سبب معروف) ولديه أيضًا خاصيتان أخريان على الأقل مذكورتان أدناه:<sup>1</sup></p>
+                <p>عادة ما يتم تشخيص فرط التعرق الإبطي الأولي الشديد عندما يكون الشخص قد عانى على الأقل 6 أشهر من التعرق المفرط تحت الإبط (بدون سبب معروف) ولديه أيضًا خاصيتان أخريان على الأقل مذكورتان أدناه:<sup>١</sup></p>
                 <ul class="custom-icon-list list-icon-1">
-                  <li>كلا الإبطين يتأثران<sup>1</sup></li>
-                  <li>إختلال الأنشطة اليومية<sup>1</sup></li>
-                  <li>يحدث مرة واحدة على الأقل في الأسبوع<sup>1</sup></li>
-                  <li>سن البداية (أول تجربة) أقل من 25 سنة<sup>1</sup></li>
-                  <li>وجود تاريخ عائلي من التعرق المفرط<sup>1</sup></li>
-                  <li>لا يحدث التعرق المفرط أثناء النوم<sup>1</sup></li>
+                  <li>كلا الإبطين يتأثران<sup>١</sup></li>
+                  <li>إختلال الأنشطة اليومية<sup>١</sup></li>
+                  <li>يحدث مرة واحدة على الأقل في الأسبوع<sup>١</sup></li>
+                  <li>سن البداية (أول تجربة) أقل من 25 سنة<sup>١</sup></li>
+                  <li>وجود تاريخ عائلي من التعرق المفرط<sup>١</sup></li>
+                  <li>لا يحدث التعرق المفرط أثناء النوم<sup>١</sup></li>
                 </ul>
                 <p class="fs-4 mb-0 fw-bold">الاختبارات</p>
                 <p>قد تحتاج إلى اختبار واحد أو أكثر للمساعدة في تحديد سبب التعرق الشديد بجسمك. قد تؤكد اختبارات الدم أو البول أو تستبعد وجود حالة طبية أساسية.
@@ -164,7 +164,7 @@
                   </div>
                   <p class="fs-5 mb-0 fw-bold">اختبار الورق:</p>
                 </div>
-                <p>طبيبك يطبق هذا الاختبار بوضع ورق خاص على المنطقة المصابة لامتصاص العرق. في وقت لاحق، يقوم طبيبك يطبق بوزن الورق لتحديد مقدار التعرق.<sup>2</sup></p>
+                <p>طبيبك يطبق هذا الاختبار بوضع ورق خاص على المنطقة المصابة لامتصاص العرق. في وقت لاحق، يقوم طبيبك يطبق بوزن الورق لتحديد مقدار التعرق.<sup>٢</sup></p>
 
 
               </div>
@@ -226,7 +226,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -235,7 +235,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
