--- a/ar/download-brochure.html
+++ b/ar/download-brochure.html
@@ -170,7 +170,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -179,7 +179,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
