--- a/ar/faqs.html
+++ b/ar/faqs.html
@@ -152,7 +152,7 @@
                   </h2>
                   <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
-                      <p>التعرّق شئ طبيعي، فهو يحافظ على درجة حرارة الجسم. لكن فرط التعرّق ليس طبيعياً.<sup>1</sup></p>
+                      <p>التعرّق شئ طبيعي، فهو يحافظ على درجة حرارة الجسم. لكن فرط التعرّق ليس طبيعياً.<sup>١</sup></p>
                     </div>
                   </div>
                 </div>
@@ -165,7 +165,7 @@
                   <div id="flush-collapse1" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
                       <p>نتعرّق أكثر عندما يكون الجو حاراً ، عندما نمارس الرياضة، وعندما نشعر بالتوتر أو القلق.<br>
-                        لكن بعض الناس يتعرّقون أكثر من المتوسط وهذا يُعرف باسم فرط التعرّق.<sup>1</sup></p>
+                        لكن بعض الناس يتعرّقون أكثر من المتوسط وهذا يُعرف باسم فرط التعرّق.<sup>١</sup></p>
                       <p>ناقش دائمًا مع طبيبك خيارات العلاج المناسبة لحالتك.</p>
                     </div>
                   </div>
@@ -178,7 +178,7 @@
                   </h2>
                   <div id="flush-collapse5" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
-                      <p>غالباً ما يتم التقليل من تأثير فرط التعرّق الإبطي، فقد يؤثر على حياتك المهنية والاجتماعية.<sup>3</sup></p>
+                      <p>غالباً ما يتم التقليل من تأثير فرط التعرّق الإبطي، فقد يؤثر على حياتك المهنية والاجتماعية.<sup>٣</sup></p>
                     </div>
                   </div>
                 </div>
@@ -191,7 +191,7 @@
                   <div id="flush-collapse6" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
                       <p>إذا كنت تعاني من فرط التعرّق، فأنت لست وحدك في هذا الصراع.
-                        أفاد 75٪ من المرضى أن التعرّق المفرط أثر على حياتهم الاجتماعية، وصحتهم النفسية والعاطفية.<sup>3</sup></p>
+                        أفاد 75٪ من المرضى أن التعرّق المفرط أثر على حياتهم الاجتماعية، وصحتهم النفسية والعاطفية.<sup>٣</sup></p>
                       <p>ناقش دائمًا مع طبيبك خيارات العلاج المناسبة لحالتك.</p>
                     </div>
                   </div>
@@ -204,7 +204,7 @@
                   </h2>
                   <div id="flush-collapse7" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
-                      <p>فرط التعرّق يؤثر بالتساوي على الرجال والنساء، ووجد أن انتشاره هو الأعلى بين الأشخاص الذين تتراوح أعمارهم بين 18 و 39 عاماً مقارنة بالبالغين الذين تزيد أعمارهم عن 65 عاماً.<sup>3</sup></p>
+                      <p>فرط التعرّق يؤثر بالتساوي على الرجال والنساء، ووجد أن انتشاره هو الأعلى بين الأشخاص الذين تتراوح أعمارهم بين 18 و 39 عاماً مقارنة بالبالغين الذين تزيد أعمارهم عن 65 عاماً.<sup>٣</sup></p>
                       <p>ناقش دائمًا مع طبيبك خيارات العلاج المناسبة لحالتك.</p>
                     </div>
                   </div>
@@ -217,7 +217,7 @@
                   </h2>
                   <div id="flush-collapse8" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
-                      <p>يحسن توكسين البوتولينوم أ نوعية الحياة في المرضى الذين يعانون من فرط التعرّق الإبطي بمتوسط مدة تأثير 7 أشهر.<sup>4</sup></p>
+                      <p>يحسن توكسين البوتولينوم أ نوعية الحياة في المرضى الذين يعانون من فرط التعرّق الإبطي بمتوسط مدة تأثير 7 أشهر.<sup>٤</sup></p>
                       <p>هل تحدثت إلى مقدم الرعاية الطبية الخاص بك عن خيارات علاج فرط التعرّق؟</p>
                       <p>قد تختلف استجابات المرضى للعلاجات من مريض لآخر. ناقش دائمًا مع طبيبك خيارات العلاج المناسبة لحالتك.</p>
                     </div>
@@ -232,7 +232,7 @@
                   <div id="flush-collapse9" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
                       <p>ترتبط شدة فرط التعرّق الإبطي بتأثيره على حياتك اليومية.
-                        أجب عن هذا السؤال لتعرف ما إذا كنت مصاباً بفرط التعرّق الإبطي.<sup>5</sup></p>
+                        أجب عن هذا السؤال لتعرف ما إذا كنت مصاباً بفرط التعرّق الإبطي.<sup>٥</sup></p>
                       <ol>
                         <li>لا يمكن ملاحظته أبدًا ولا يتدخل أبدًا في أنشطتي اليومية.</li>
                         <li>يمكن تحمله ولكن في بعض الأحيان يتعارض مع أنشطتي اليومية.</li>
@@ -253,7 +253,7 @@
                   <div id="flush-collapse10" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
                       <p>يتمثل العرض الرئيسي لفرط التعرّق في التعرّق الغزير والمرئي. يتعدى ذلك التعرّق الناتج عن التواجد في مكان حار، ممارسة الرياضة، الشعور بالقلق أو التوتر. يتسبب فرط التعرّق الذي يحدث عادةً في الإبطين أو أماكن اخرى في حدوث نوبة
-                        واحدة على الأقل في الأسبوع عندما تكون مستيقظًا. وعادة ما يحدث فرط التعرّق على جانبي الجسم.<sup>6</sup></p>
+                        واحدة على الأقل في الأسبوع عندما تكون مستيقظًا. وعادة ما يحدث فرط التعرّق على جانبي الجسم.<sup>٦</sup></p>
                       <p>ناقش دائمًا مع طبيبك خيارات العلاج المناسبة لحالتك.</p>
                     </div>
                   </div>
@@ -266,7 +266,7 @@
                   </h2>
                   <div id="flush-collapse11" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
-                      <p>يمكن للعرّق المفرط أن يجعلك أكثر عرضة لبعض الأمراض الجلدية، مثل: الثآليل، الدمامل، كما يمكن أن يؤدي إلى تفاقم الإكزيما.<sup>7</sup></p>
+                      <p>يمكن للعرّق المفرط أن يجعلك أكثر عرضة لبعض الأمراض الجلدية، مثل: الثآليل، الدمامل، كما يمكن أن يؤدي إلى تفاقم الإكزيما.<sup>٧</sup></p>
                     </div>
                   </div>
                 </div>
@@ -280,7 +280,7 @@
                     <div class="accordion-body">
                       <p>تختلف مضادات التعرّق عن مزيلات العرق.
                         يقلل مضاد التعرّق من إفراز العرق بينما مزيلات العرق تزيل الرائحة فقط ولا تقلل من كمية التعرّق.</p>
-                      <p>إذا كانت مضادات التعرّق العادية لا تتحكم في التعرّق المفرط، فقد تكون تعاني من حالة فرط التعرّق.<sup>8</sup></p>
+                      <p>إذا كانت مضادات التعرّق العادية لا تتحكم في التعرّق المفرط، فقد تكون تعاني من حالة فرط التعرّق.<sup>٨</sup></p>
                       <p>ناقش دائمًا مع طبيبك خيارات العلاج المناسبة لحالتك.</p>
                     </div>
                   </div>
@@ -294,7 +294,7 @@
                   <div id="flush-collapse13" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
                       <p>فرط التعرّق له تأثير على صحتنا العقلية والبدنية. على الرغم من أن الأمر قد يبدو تفاصيل بسيطة لأولئك الذين لا يختبرونها، إلا أن التعرّق المفرط يمكن أن يؤدي إلى الإجهاد البدني والعاطفي لأولئك الذين يقاتلون فرط التعرّق كل
-                        يوم.<sup>9</sup></p>
+                        يوم.<sup>٩</sup></p>
                     </div>
                   </div>
                 </div>
@@ -365,7 +365,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -374,7 +374,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
