--- a/ar/hyperhidrosis-facts.html
+++ b/ar/hyperhidrosis-facts.html
@@ -136,14 +136,14 @@
               <div class="col-lg-10 pt-5 pb-2">
                 <h2 class="h1 fw-bold display-4 text-animate pb-2">ما هو فرط التعرق؟</h2>
                 <p class="fs-4 mb-2 fw-bold">تعريف فرط التعرق؟</p>
-                <p>العرق هو سائل عديم الرائحة صافٍ تفرزه الغدد العرقية التي تنظم درجة حرارة الجسم.<sup>1</sup></p>
+                <p>العرق هو سائل عديم الرائحة صافٍ تفرزه الغدد العرقية التي تنظم درجة حرارة الجسم.<sup>١</sup></p>
                 <p>فرط التعرق هي حالة طبية تسبب التعرق المفرط. يحدث التعرق المفرط عندما يتعرق الشخص أكثر مما هو ضروري. نعم من الضروري أن تتعرق. يعمل التعرق على تبريد الجسم مما يمنعنا من السخونة الزائدة. ومع ذلك، فإن الأشخاص الذين يعانون من فرط التعرق
                   يتعرقون عندما لا يحتاج الجسم إلى التبريد.</p>
                 <p>يتعرق العديد من الأشخاص المصابين بفرط التعرق من منطقة أو منطقتين من الجسم. في أغلب الآحيان يتعرقون من راحة اليد أو القدمين أو الإبطين أو الرأس. بينما يظل باقي الجسم جافًا، قد يتساقط العرق من منطقة أو منطقتان.</p>
                 <p>التعرق المفرط يمكن أن يتداخل مع الأنشطة اليومية. يمكن أن تكون الأيدي متعرقه لدرجة يصعب معها فتح مقبض الباب أو استخدام الكمبيوتر. تمتص الملابس العرق من منطقة الإبطين، مما يسبب علامات العرق الواضحة. ولأن الجلد غالباً ما يكون رطباً
-                  يمكن أن يؤدي ذلك إلى حدوث بعض أنواع العدوى الجلدية.<sup>2</sup></p>
-                <p>لست وحدك، ما يقارب من ٣٪ من عامة، معظمهم من الأشخاص الذين تتراوح أعمارهم بين ٢٥ و٦٤ عامًا، يعانون من فرط التعرق.<sup>1</sup></p>
-                <p class="mb-1">يمكن ان يؤثر فرط التعرق الأولي على منطقة واحدة أو أكثر من مناطق الجسم، وأكثر مناطق الجسم شيوعاً حيث يحدث فرط التعرق هي تحت الإبط، كما ورد في دراسة استقصائية لمرضى فرط التعرق في الولايات المتحدة.<sup>3</sup></p>
+                  يمكن أن يؤدي ذلك إلى حدوث بعض أنواع العدوى الجلدية.<sup>٢</sup></p>
+                <p>لست وحدك، ما يقارب من ٣٪ من عامة، معظمهم من الأشخاص الذين تتراوح أعمارهم بين ٢٥ و٦٤ عامًا، يعانون من فرط التعرق.<sup>١</sup></p>
+                <p class="mb-1">يمكن ان يؤثر فرط التعرق الأولي على منطقة واحدة أو أكثر من مناطق الجسم، وأكثر مناطق الجسم شيوعاً حيث يحدث فرط التعرق هي تحت الإبط، كما ورد في دراسة استقصائية لمرضى فرط التعرق في الولايات المتحدة.<sup>٣</sup></p>
               </div>
             </div>
             <div class="row align-items-center justify-content-center pb-5">
@@ -156,7 +156,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/underarm.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٦٥%</span><span>الإبط<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٦٥%</span><span>الإبط<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -164,7 +164,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/head.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٢%</span><span>الرأس/الوجه<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٢%</span><span>الرأس/الوجه<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -172,7 +172,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/hand.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٠%</span><span>اليدين<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٠%</span><span>اليدين<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -180,7 +180,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/feet.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٣٨%</span><span>القدم<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٣٨%</span><span>القدم<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -188,7 +188,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/under-breasts.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٩%</span><span>تحت الصدر<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٩%</span><span>تحت الصدر<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -196,7 +196,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/back.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٨%</span><span>الظهر<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٨%</span><span>الظهر<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -204,7 +204,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/chest.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٧%</span><span>الصدر<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٧%</span><span>الصدر<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -213,7 +213,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/underarm.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٦٥%</span><span>الإبط<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٦٥%</span><span>الإبط<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -221,7 +221,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/head.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٢%</span><span>الرأس/الوجه<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٢%</span><span>الرأس/الوجه<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -229,7 +229,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/hand.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٠%</span><span>اليدين<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٤٠%</span><span>اليدين<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -237,7 +237,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/feet.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٣٨%</span><span>القدم<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٣٨%</span><span>القدم<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -245,7 +245,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/under-breasts.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٩%</span><span>تحت الصدر<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٩%</span><span>تحت الصدر<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -253,7 +253,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/back.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٨%</span><span>الظهر<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٨%</span><span>الظهر<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -261,7 +261,7 @@
                       <div class="px-3 text-center">
                         <img class="w-100" src="assets/img/icon/h/chest.svg" alt="Icon">
                         <div class="d-flex align-items-center justify-content-center lh-sm mh-55-px">
-                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٧%</span><span>الصدر<sup class="fw-light">2</sup></span>
+                          <span class="rounded-circle icons-carousel-value text-white bg-dark me-1 fs-7 fw-bold">٢٧%</span><span>الصدر<sup class="fw-light">٢</sup></span>
                         </div>
                       </div>
                     </div>
@@ -297,7 +297,7 @@
 
           <div class="col-lg-4 d-flex justify-content-center pt-3 pt-lg-0">
             <div class="position-relative title-arrow">
-              <p class="h2 pb-3 text-start">ما هو فرط<br class="d-none d-lg-block"> التعرق <br class="d-none d-lg-block">الأساسي؟<sup class="fs-5"> 4</sup></p>
+              <p class="h2 pb-3 text-start">ما هو فرط<br class="d-none d-lg-block"> التعرق <br class="d-none d-lg-block">الأساسي؟<sup class="fs-5"> ٤</sup></p>
             </div>
           </div>
           <div class="col-lg-8">
@@ -339,7 +339,7 @@
         <div class="row d-flex justify-content-center align-items-center primary-secondary-bg">
           <div class="col-lg-4 d-flex justify-content-center pt-3 pt-lg-0">
             <div class="position-relative title-arrow title-arrow-secondary">
-              <p class="h2 pb-3 text-start">ما هو فرط<br class="d-none d-lg-block"> التعرق <br class="d-none d-lg-block">الثانوي؟<sup class="fs-5"> 4</sup></p>
+              <p class="h2 pb-3 text-start">ما هو فرط<br class="d-none d-lg-block"> التعرق <br class="d-none d-lg-block">الثانوي؟<sup class="fs-5"> ٤</sup></p>
             </div>
           </div>
           <div class="col-lg-8">
@@ -473,7 +473,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -482,7 +482,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
