--- a/ar/index.html
+++ b/ar/index.html
@@ -215,7 +215,7 @@
                   </div>
                 </div>
 
-                <p class="h3 pt-3 text-start">٦٥٪ من المرضى المصابين بفرط التعرق يعانون من فرط التعرق الإبطي<sup>1</sup></p>
+                <p class="h3 pt-3 text-start">٦٥٪ من المرضى المصابين بفرط التعرق يعانون من فرط التعرق الإبطي<sup>١</sup></p>
 
               </div>
             </div>
@@ -229,7 +229,7 @@
                     <span class="text-animate">٣٪</span>
                   </div>
                 </div>
-                <p class="h3 pt-3 text-start">ما یقرب من ۳٪ من الناس فى جمیع أنحاء العالم - ٣٦٥ - ملیون شخص یعانون من فرط التعرّق.<sup>1,2</sup></p>
+                <p class="h3 pt-3 text-start">ما یقرب من ۳٪ من الناس فى جمیع أنحاء العالم - ٣٦٥ - ملیون شخص یعانون من فرط التعرّق.<sup>١,٢</sup></p>
               </div>
             </div>
           </div>
@@ -237,7 +237,7 @@
             <div>
               <div class="row d-flex justify-content-center py-md-5">
                 <div class="col-10">
-                  <p class="h2 pb-3">تصيب الرجال و النساء بالتساوي<sup>1</sup></p>
+                  <p class="h2 pb-3">تصيب الرجال و النساء بالتساوي<sup>١</sup></p>
                 </div>
               </div>
             </div>
@@ -332,7 +332,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -341,7 +341,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
