--- a/ar/surgical-other-procedures.html
+++ b/ar/surgical-other-procedures.html
@@ -153,7 +153,7 @@
                       <img width="200" src="assets/img/icon/surgical/surgical-1.svg" alt="surgical icon">
                       <p class="fs-4 mb-2 fw-bold text-center">إزالة غدد العرق</p>
                       <div class="text-start">
-                        <p>إذا كنت تتعرق بشدة في الإبط فقط، فقد يقترح الطبيب الخاص بك إزالة تلك الغدد العرقية. يمكن القيام بذلك من خلال كشطها أو شفطها أو باستخدام مزيج من الاثنين (الكشط والشفط).<sup>1</sup></p>
+                        <p>إذا كنت تتعرق بشدة في الإبط فقط، فقد يقترح الطبيب الخاص بك إزالة تلك الغدد العرقية. يمكن القيام بذلك من خلال كشطها أو شفطها أو باستخدام مزيج من الاثنين (الكشط والشفط).<sup>١</sup></p>
                       </div>
                     </div>
                   </div>
@@ -170,7 +170,7 @@
                           الشديد في مناطق أخرى من جسمك بشكل دائم، وهو ما يسمى التعرق التعويضي.</p>
                         <p>هناك نوع مختلف من هذا الإجراء يعالج التعرق المفرط في راحة اليد، والذي يقطع الإشارات العصبية دون إزالة العصب الودي.</p>
                         <p>بشكل عام، لا يتم أخذ جراحة الأعصاب في الاعتبار إلا للأشخاص الذين جربوا العلاجات الأخرى دون نجاح نظرًا لوجود مخاطر من الآثار الجانبية والمضاعفات.</p>
-                        <p>من الضروري التشاور مع طبيبك الخاص لتحديد ما إذا كان هذا الإجراء هو الخيار الأفضل لك.<sup>1</sup></p>
+                        <p>من الضروري التشاور مع طبيبك الخاص لتحديد ما إذا كان هذا الإجراء هو الخيار الأفضل لك.<sup>١</sup></p>
                       </div>
                     </div>
                   </div>
@@ -184,7 +184,7 @@
                       <p class="fs-4 mb-2 fw-bold text-center">العلاج بالموجات الدقيقة</p>
                       <div class="text-start">
                         <p>مع هذا العلاج، يوفر جهاز محمول باليد طاقة الميكروويف لتدمير الغدد العرقية في الإبط. تشمل العلاجات جلستين مدة كل منهما ٢٠ إلى ٣٠ دقيقة، تفصل بينهما ثلاثة أشهر.</p>
-                        <p>الآثار الجانبية المحتملة هي تغيير في الإحساس بالجلد وبعض الانزعاج. الآثار الجانبية طويلة المدى غير معروفة.<sup>1</sup></p>
+                        <p>الآثار الجانبية المحتملة هي تغيير في الإحساس بالجلد وبعض الانزعاج. الآثار الجانبية طويلة المدى غير معروفة.<sup>١</sup></p>
                       </div>
                     </div>
                   </div>
@@ -252,7 +252,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -261,7 +261,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
