--- a/en/how-to-treat.html
+++ b/en/how-to-treat.html
@@ -155,12 +155,10 @@
               <img class="w-100" src="assets/img/banners/lines-mild.gif?v=1.2" alt="disease mild">
             </div>
           </div>
-          <div class="px-lg-2">
-
-                          <p><strong>1<sup>st</sup> line:</strong> Topical Aluminum Chloride (AC).</p>
-              <p><strong>2<sup>nd</sup> line:</strong> Injection within the skin of BTX-A (Botulinum toxin type-A) may be administered.</p>
-              <p><strong>3<sup>rd</sup> line:</strong> Surgical procedure to reduce sweat glands, done on an outpatient basis with local anesthesia.</p>
-
+          <div class="px-lg-2 text-start">
+            <p><strong>1<sup>st</sup> line:</strong> Topical Aluminum Chloride (AC).</p>
+            <p><strong>2<sup>nd</sup> line:</strong> Injection within the skin of BTX-A (Botulinum toxin type-A) may be administered.</p>
+            <p><strong>3<sup>rd</sup> line:</strong> Surgical procedure to reduce sweat glands, done on an outpatient basis with local anesthesia.</p>
           </div>
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0">
@@ -172,13 +170,13 @@
               <img class="w-100" src="assets/img/banners/lines-severe.gif?v=1.2" alt="disease severe">
             </div>
           </div>
-          <div class="px-lg-2">
-                          <p><strong>1<sup>st</sup> line:</strong> Topical Aluminum Chloride (AC).</p>
+          <div class="px-lg-2 text-start">
+              <p><strong>1<sup>st</sup> line:</strong> Topical Aluminum Chloride (AC).</p>
               <p><strong>2<sup>nd</sup> line:</strong> Intradermal injection of BTX-A (Botulinum toxin type-A) may be administered.</p>
               <p><strong>3<sup>rd</sup> line:</strong> The physician may consider the use of oral medications alone or as an additional therapy.</p>
               <p><strong>4<sup>th</sup> line:</strong> Surgical procedure to reduce sweat glands, done on an outpatient basis with local anesthesia.</p>
               <p><strong>5<sup>th</sup> line:</strong> A procedure known as Endoscopic thoracic sympathectomy (ETS) would be the last resort in patients not responding to the above therapies.</p>
-                      </div>
+          </div>
         </div>
         <div class="col-12 col-lg-10 pt-3">
                       <p class="bg-secondary px-2 py-2 text-white">Patients response to treatments may vary from a patient to another. Always discuss with your doctor the suitable treatment options for your condition.</p>
@@ -235,7 +233,7 @@
 
     <div class="row d-flex align-items-center justify-content-between">
       <div class="col-md-4 pb-5 pb-md-0">
-        <a href="https://www.allerganaesthetics.com/" target="_blank">
+        <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
           <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
