--- a/ar/lifestyle-tips.html
+++ b/ar/lifestyle-tips.html
@@ -155,7 +155,7 @@
                   <div class="col-md-4">
                     <div class="d-flex justify-content-center">
                       <h1 class="h2 fw-bold display-6 text-animate pb-2">افعل</h1>
-                      <span class="fw-bold">1</span>
+                      <span class="fw-bold">١</span>
                     </div>
                     <div class="text-center">
                       <img height="160" src="assets/img/icon/lifestyle/do.svg" alt="lifestyle dos">
@@ -177,7 +177,7 @@
                   <div class="col-md-4">
                     <div class="d-flex justify-content-center">
                       <h1 class="h2 fw-bold display-6 text-animate pb-2">لا تفعل</h1>
-                      <span class="fw-bold">1</span>
+                      <span class="fw-bold">١</span>
                     </div>
                     <div class="text-center">
                       <img height="160" src="assets/img/icon/lifestyle/dont.svg" alt="lifestyle donts">
@@ -218,9 +218,9 @@
           <div class="col-xl-10 col-12 pt-3">
             <div class="row">
               <div class="col-lg-12 pb-5">
-                <p class="fs-4 mb-2 fw-bold">تقنية الإرحال الأيوني (Iontophoresis)<sup>2</sup></p>
+                <p class="fs-4 mb-2 fw-bold">تقنية الإرحال الأيوني (Iontophoresis)<sup>٢</sup></p>
                 <p>باستخدام هذا العلاج المنزلي، يمكنك نقع يديك أو قدميك في وعاء من الماء بينما يمرر الجهاز تيارًا كهربائيًا خفيفًا عبر الماء. التيار يسد الأعصاب التي تسبب التعرق. يمكنك شراء الجهاز إذا كان لديك وصفة طبية من الطبيب الخاص بك.</p>
-                <p>ستحتاج إلى نقع المناطق المصابة لمدة ٢٠ إلى ٤٠ دقيقة استخدم الجهاز حسب نصيحة طبيبك المعالج.<sup>1</sup></p>
+                <p>ستحتاج إلى نقع المناطق المصابة لمدة ٢٠ إلى ٤٠ دقيقة استخدم الجهاز حسب نصيحة طبيبك المعالج.<sup>١</sup></p>
 
                 <div class="row d-flex justify-content-center align-items-center py-3 py-md-4">
                   <div class="col-xxl-6 col-xl-8 col-lg-8 col-md-9 col-sm-10">
@@ -282,7 +282,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -291,7 +291,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
